--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "V8 Engine - Express Based Framework",
   "main": "bin/www",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/www"
+    "test": "mocha --exit",
+    "start": "node bin/www",
+    "dev": "nodemon bin/www",
+    "deploy": "deploy.bat"
   },
   "repository": {
     "type": "git",
@@ -15,26 +17,42 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "aws-sdk": "^2.820.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "firebase-admin": "^9.4.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "googleapis": "^71.0.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.11",
+    "razorpay": "^2.0.6",
+    "remove-markdown": "^0.3.0",
+    "socket.io": "^3.1.2",
+    "stripe": "^8.184.0",
+    "turndown": "^7.1.1",
+    "twilio": "^3.54.2",
+    "uuid": "^8.3.2",
     "validatorjs": "^3.19.0",
-    "web-push": "^3.4.4"
+    "web-push": "^3.4.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chalk": "^4.1.0",
     "cli-table3": "^0.6.0",
-    "enquirer": "^2.3.6"
+    "enquirer": "^2.3.6",
+    "nodemon": "^2.0.6"
   }
 }
